--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -19,13 +19,13 @@
             form.username.value = form.username.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
 
             if (form.username.value.length === 0) {
-                toastWarning($("#msg-loginFormNeedInputUsername").text());
+                toastWarning('아이디를 입력해주세요.');
                 form.username.focus();
                 return;
             }
 
-            if (form.usernam`e.value.length < loginFormInputUsernameValueMinLength) {
-                toastWarning($("#msg-loginFormNeedInputUsernameMoreThan").text());
+            if (form.username.value.length < loginFormInputUsernameValueMinLength) {
+                toastWarning('아이디를 ${loginFormInputPasswordValueMinLength}자 이상 입력해주세요.');
                 form.username.focus();
                 return;
             }
@@ -33,7 +33,7 @@
             // password 이(가) 올바른지 체크
 
             form.password.value = form.password.value.trim(); // 입력란의 입력값에 있을지 모르는 좌우공백제거
-            ```````````````````````````````````````````````````````````````````````
+
             if (form.password.value.length === 0) {
                 toastWarning('비밀번호를 입력해주세요.');
                 form.password.focus();
@@ -52,18 +52,23 @@
 
     <div class="flex justify-center items-center min-h-screen">
         <div class="w-96 bg-white p-8 rounded-lg mb-64">
-            <h2 class="text-xl font-semibold mb-4">로그인</h2>
-            <div>
-                <label for="username" class="block mb-2">아이디</label>
-                <input type="text" id="username" class="border-b border-info px-2 py-2 w-full focus:outline-none"
-                       placeholder="아이디를 입력하세요">
-            </div>
-            <div>
-                <label for="password" class="block mb-2 mt-4">비밀번호</label>
-                <input type="password" id="password" class="border-b border-info px-2 py-2 w-full focus:outline-none"
-                       placeholder="비밀번호를 입력하세요">
-            </div>
-            <button class="mt-8 bg-info text-white px-4 py-2 rounded-lg">로그인</button>
+            <form th:action method="post" th:object="${@rq.member}" class="flex flex-col gap-6" onsubmit="LoginForm__submit(this); return false;">
+                <h2 class="text-xl font-semibold mb-4">로그인</h2>
+
+                <div class="form-control">
+                    <label for="username" class="block mb-2">아이디</label>
+                    <input type="text" id="username" th:field="*{username}" class="border-b border-info px-2 py-2 w-full focus:outline-none"
+                           placeholder="아이디를 입력하세요">
+                </div>
+
+                <div class="form-control">
+                    <label for="password" class="block mb-2 mt-4">비밀번호</label>
+                    <input type="password" id="password" class="border-b border-info px-2 py-2 w-full focus:outline-none"
+                           placeholder="비밀번호를 입력하세요">
+                </div>
+
+                <button type="submit" class="mt-8 bg-info text-white px-4 py-2 rounded-lg">로그인</button>
+            </form>
         </div>
     </div>
 </div>
