--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -1,4 +1,4 @@
-<html layout:decorate="~{layout/layout.html}">
+<html layout:decorate="~{common/layout.html}">
 <head>
     <title>로그인</title>
 </head>
@@ -20,7 +20,7 @@
             }
 
             if (form.username.value.length < loginFormInputUsernameValueMinLength) {
-                toastWarning('아이디를 ${loginFormInputPasswordValueMinLength}자 이상 입력해주세요.');
+                toastWarning('아이디를 ' + loginFormInputUsernameValueMinLength + '자 이상 입력해주세요.');
                 form.username.focus();
                 return;
             }
@@ -36,7 +36,7 @@
             }
 
             if (form.password.value.length < loginFormInputPasswordValueMinLength) {
-                toastWarning('비밀번호를 ${loginFormInputPasswordValueMinLength}자 이상 입력해주세요.');
+                toastWarning('비밀번호를 ' + loginFormInputPasswordValueMinLength + '자 이상 입력해주세요.');
                 form.password.focus();
                 return;
             }
@@ -47,22 +47,24 @@
 
     <div class="flex justify-center items-center min-h-screen">
         <div class="w-96 bg-white p-8 rounded-lg mb-64">
-            <form th:action method="post" th:object="${@rq.member}" class="flex flex-col gap-6" onsubmit="LoginForm__submit(this); return false;">
-                <h2 class="text-xl font-semibold mb-4">로그인</h2>
-
+            <h2 class="text-xl font-semibold mb-4">로그인</h2>
+            <form th:action method="post" th:object="${loginRequestDto}" class="flex flex-col gap-6" onsubmit="LoginForm__submit(this); return false;">
                 <div class="form-control">
-                    <label for="username" class="block mb-2">아이디</label>
-                    <input type="text" id="username" th:field="*{username}" class="border-b border-info px-2 py-2 w-full focus:outline-none"
+                    <label class="block mb-2">아이디</label>
+                    <input type="text" name="username" class="border-b border-info px-2 py-2 w-full focus:outline-none"
                            placeholder="아이디를 입력하세요">
+<!--                    <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="error-message">-->
+<!--                        <p>로그인에 실패했습니다. 아이디와 비밀번호를 확인해주세요.</p>-->
+                    </div>
                 </div>
-
                 <div class="form-control">
-                    <label for="password" class="block mb-2 mt-4">비밀번호</label>
-                    <input type="password" id="password" class="border-b border-info px-2 py-2 w-full focus:outline-none"
+                    <label class="block mb-2 mt-4">비밀번호</label>
+                    <input type="password" name="password" class="border-b border-info px-2 py-2 w-full focus:outline-none"
                            placeholder="비밀번호를 입력하세요">
                 </div>
-
-                <button type="submit" class="mt-8 bg-info text-white px-4 py-2 rounded-lg">로그인</button>
+                <div>
+                    <button type="submit" class="mt-8 bg-info text-white px-4 py-2 rounded-lg">로그인</button>
+                </div>
             </form>
         </div>
     </div>
