--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -2,49 +2,82 @@
 <head>
     <title>회원가입</title>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+        function CheckDuplicateUsername() {
+            const usernameInput = document.getElementById("username");
+            const username = usernameInput.value.trim();
+            const usernameMessage = document.getElementById("usernameMessage");
+
+            fetch('/member/join', {
+                method: 'post',
+                body: formData // 요청 데이터를 FormData 객체로 전달
+            })
+                .then(response => response.json())
+                .then(data => {
+                    let isDuplicate = false;
+
+                    if (data.resultCode !== 'S-1') {
+                        isDuplicate = true;
+                    }
+
+                    if (isDuplicate) {
+                        usernameMessage.innerText = "이미 사용중인 아이디입니다."
+                        usernameMessage.classList.add("text-red-500");
+                        usernameMessage.classList.remove("text-green-500"); // 중복 아닌 경우를 위해 기존 클래스 제거
+                    } else {
+                        usernameMessage.innerText = "사용 가능한 아이디입니다.";
+                        usernameMessage.classList.add("text-green-500");
+                        usernameMessage.classList.remove("text-red-500"); // 중복인 경우를 위해 기존 클래스 제거
+                    }
+                });
+        }
+    </script>
 </head>
 <body>
 <main layout:fragment="main" class="container my-3 mx-auto">
     <div class="flex justify-center items-center min-h-screen">
         <div class="w-96 bg-white p-8 rounded-lg">
             <h2 class="text-2xl font-semibold mb-4">회원가입</h2>
-            <form th:action method="post" th:object="${joinRequestDto}" class="flex flex-col gap-6" onsubmit="LoginForm__submit(this); return false;">
-                <div class="form-control">
+
+            <form th:action th:object="${joinRequestDto}" method="post" class="flex flex-col gap-6" onsubmit="LoginForm__submit(this); return false;">
+                <div>
                     <label class="block mb-2 text-sm">아이디</label>
                     <div class="flex items-center">
-                        <input type="text" name="username"
-                               class="border-b border-info px-2 py-2 w-full focus:outline-none"
+                        <input type="text" name="username" id="username"
+                               th:field="*{username}"
+                               class="border-b border-info px-2 py-2 w-full focus:outline-none form-control"
                                placeholder="아이디를 입력하세요">
                         <button class="ml-2 bg-info text-white px-4 py-2 rounded-lg text-sm">중복확인</button>
                     </div>
-<!--                    <div th:if="${#fields.hasErrors('username')}" class="text-red-500 text-xs mt-1">-->
-<!--                        <span th:errors="*{username}"></span>-->
-<!--                    </div>-->
+                    <div class="mt-2">
+                        <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" id="usernameMessage" class="text-red-500"></span>
+                    </div>
                 </div>
-                <div class="form-control">
+                <div>
                     <label for="password" class="block mb-2 mt-4 text-sm">비밀번호</label>
                     <input type="password" id="password"
-                           class="border-b border-info px-2 py-2 w-full focus:outline-none" placeholder="비밀번호를 입력하세요">
+                           class="border-b border-info px-2 py-2 w-full focus:outline-none form-control" placeholder="비밀번호를 입력하세요">
                 </div>
-                <div class="form-control">
+                <div>
                     <label for="confirmPassword" class="block mb-2 mt-4 text-sm">비밀번호 확인</label>
                     <input type="password" id="confirmPassword"
-                           class="border-b border-info px-2 py-2 w-full focus:outline-none"
+                           class="border-b border-info px-2 py-2 w-full focus:outline-none form-control"
                            placeholder="비밀번호를 다시 한 번 입력하세요">
                 </div>
-                <div class="form-control">
+                <div>
                     <label for="nickname" class="block mb-2 mt-4 text-sm">닉네임</label>
                     <div class="flex items-center">
                         <input type="text" id="nickname"
-                               class="border-b border-info px-2 py-2 w-full focus:outline-none"
+                               class="border-b border-info px-2 py-2 w-full focus:outline-none form-control"
                                placeholder="닉네임을 입력하세요">
                         <button class="ml-2 bg-info text-white px-4 py-2 rounded-lg text-sm">중복확인</button>
                     </div>
                 </div>
-                <div class="form-control">
+                <div>
                     <label for="email" class="block mb-2 mt-4 text-sm">이메일</label>
                     <div class="flex items-center">
-                        <input type="email" id="email" class="border-b border-info px-2 py-2 w-full focus:outline-none"
+                        <input type="email" id="email" class="border-b border-info px-2 py-2 w-full focus:outline-none form-control"
                                placeholder="이메일을 입력하세요">
                         <button class="ml-2 bg-info text-white px-4 py-2 rounded-lg text-sm">중복확인</button>
                     </div>
