--- a/src/main/resources/templates/article/list.html
+++ b/src/main/resources/templates/article/list.html
@@ -5,8 +5,24 @@
 <body>
     <main layout:fragment="main" class="container my-3 mx-auto">
         <div class="container mx-auto p-8 w-2/3">
-            <div class="flex items-center justify-between">
+            <div class="flex items-center justify-between h-16">
                 <h1 class="text-2xl font-bold">전체 게시글</h1>
+                <form class="flex flex-col gap-6 flex-grow">
+                    <div class="form-control pt-5">
+                        <select name="sortCode" class="ml-2 select w-40 select-ghost select-sm"
+                                onchange="$(this).closest('form').submit();">
+                            <option value="1">최신순</option>
+                            <option value="2">조회순</option>
+                            <option value="3">댓글 많은 순</option>
+                            <option value="4">좋아요 많은 순</option>
+                        </select>
+                        <script>
+                            if (params.gender) {
+                                $(`select[name="sortCode"]:last`).val(params.sortCode[0]);
+                            }
+                        </script>
+                    </div>
+                </form>
                 <a th:href="@{/article/create}" class="ml-2 my-3 bg-info text-white px-4 py-2 rounded-lg text-sm hover:bg-blue-500">게시글 작성</a>
             </div>
             <ul class="container">
