--- a/src/main/resources/templates/article/main.html
+++ b/src/main/resources/templates/article/main.html
@@ -66,7 +66,7 @@
             </li>
             <li th:each="article, loop : ${paging}" class="bg-white p-3 flex justify-between border-b h-11">
                 <a th:href="@{|/article/detail/${article.id}|}" th:text="${article.title}" class="text-sm flex-grow"></a>
-                <p class="text-sm mx-4 w-16 text-center">글쓴이1</p>
+                <p th:text="${article.member.username}" class="text-sm mx-4 w-16 text-center"></p>
                 <div th:text="${#lists.size(article.likesList)}" class="text-sm mx-4 w-16 text-center"></div>
                 <p th:text="${article.commentsCount}" class="text-sm mx-4 w-16 text-center"></p>
                 <p th:text="${article.viewCount}" class="text-sm mx-4 w-16 text-center"></p>
