Fix: 필터링 오류 수정

--- a/src/main/resources/templates/article/list.html
+++ b/src/main/resources/templates/article/list.html
@@ -16,7 +16,7 @@
                             <option value="3">좋아요 많은 순</option>
                         </select>
                         <script>
-                            if (params.gender) {
+                            if (params.sortCode) {
                                 $(`select[name="sortCode"]:last`).val(params.sortCode[0]);
                             }
                         </script>
