--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -2,42 +2,8 @@
 <head>
     <title>회원가입</title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script>
-        function CheckDuplicateUsername() {
-            const usernameInput = document.getElementById("username");
-            const username = usernameInput.value.trim();
-            const usernameMessage = document.getElementById("usernameMessage");
-
-            const formData = new FormData();
-            formData.append("username", username);
-
-            fetch('/member/join', {
-                method: 'post',
-                body: formData // 요청 데이터를 FormData 객체로 전달
-            })
-                .then(response => response.json())
-                .then(data => {
-                    let isDuplicate = false;
-
-                    if (data.resultCode !== 'S-1') {
-                        isDuplicate = true;
-                    }
-
-                    if (isDuplicate) {
-                        usernameMessage.innerText = "이미 사용중인 아이디입니다."
-                        usernameMessage.classList.add("text-red-500");
-                        usernameMessage.classList.remove("text-green-500"); // 중복 아닌 경우를 위해 기존 클래스 제거
-                    } else {
-                        usernameMessage.innerText = "사용 가능한 아이디입니다.";
-                        usernameMessage.classList.add("text-green-500");
-                        usernameMessage.classList.remove("text-red-500"); // 중복인 경우를 위해 기존 클래스 제거
-                    }
-
-                    usernameMessage.style.display = "block";
-                });
-        }
-    </script>
+    <script src="/resource/valid/duplicationCheck.js"></script>
+    <script src="/resource/valid/submitForm.js"></script>
 </head>
 <body>
 <main layout:fragment="main" class="container my-3 mx-auto">
@@ -45,18 +11,18 @@
         <div class="w-96 bg-white p-8 rounded-lg">
             <h2 class="text-2xl font-semibold mb-4">회원가입</h2>
 
-            <form th:action th:object="${joinRequestDto}" method="post" class="flex flex-col gap-6" onsubmit="LoginForm__submit(this); return false;">
+            <form th:action th:object="${joinRequestDto}" method="post" class="flex flex-col gap-6">
                 <div>
                     <label class="block mb-2 text-sm">아이디</label>
                     <div class="flex items-center">
                         <input type="text" name="username" th:field="*{username}"
                                class="border-b border-info px-2 py-2 w-full focus:outline-none form-control"
                                placeholder="아이디를 입력하세요">
-                        <button class="ml-2 bg-info text-white px-4 py-2 rounded-lg text-sm">중복확인</button>
+                        <button class="ml-2 bg-info text-white px-4 py-2 rounded-lg text-sm" onclick="checkDuplication(event);">중복확인</button>
                     </div>
                     <div class="mt-2">
                         <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="text-red-500"></span>
-                        <span id="usernameMessage" style="display: none;">흠</span>
+                        <span id="usernameMessage" style="display: none;">중복여부</span>
                     </div>
                 </div>
                 <div>
@@ -89,11 +55,12 @@
                             <input type="text" name="nickname" th:field="*{nickname}"
                                    class="border-b border-info px-2 py-2 w-full focus:outline-none form-control"
                                    placeholder="닉네임을 입력하세요">
-                            <button class="ml-2 bg-info text-white px-4 py-2 rounded-lg text-sm">중복확인</button>
+                            <button class="ml-2 bg-info text-white px-4 py-2 rounded-lg text-sm" onclick="checkDuplication(event);">중복확인</button>
                         </div>
                     </div>
                     <div class="mt-2">
                         <span th:if="${#fields.hasErrors('nickname')}" th:errors="*{nickname}" class="text-red-500"></span>
+                        <span id="nicknameMessage" style="display: none;">중복여부</span>
                     </div>
 
                 </div>
@@ -104,17 +71,19 @@
                             <input type="email" name="email" th:field="*{email}"
                                    class="border-b border-info px-2 py-2 w-full focus:outline-none form-control"
                                    placeholder="이메일을 입력하세요">
-                            <button class="ml-2 bg-info text-white px-4 py-2 rounded-lg text-sm">중복확인</button>
+                            <button class="ml-2 bg-info text-white px-4 py-2 rounded-lg text-sm" onclick="checkDuplication(event);">중복확인</button>
                         </div>
                     </div>
                     <div class="mt-2">
                         <span th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="text-red-500"></span>
+                        <span id="emailMessage" style="display: none;">중복여부</span>
                     </div>
                 </div>
-                <button type="submit" class="mt-8 bg-info text-white px-4 py-2 rounded-lg text-sm">가입하기</button>
+                <button type="submit" onclick="submitForm()" class="mt-8 bg-info text-white px-4 py-2 rounded-lg text-sm">가입하기</button>
             </form>
         </div>
     </div>
 </main>
 </body>
+
 </html>
