--- a/src/main/resources/templates/article/detailArticle.html
+++ b/src/main/resources/templates/article/detailArticle.html
@@ -86,7 +86,7 @@
                                         <div class="text-xs" th:text="${#temporals.format(subComment.createdDate, '(yyyy-MM-dd HH:mm)')}"></div>
                                     </div>
                                     <div class="flex items-center justify-center">
-                                        <button class="text-xs text-black underline modify-button pb-3 text-gray-400" th:if="${@@rq.login  and @rq.member.id == subComment.member.id}" onclick="editSubComment()" th:attr="data-id=${subComment.id}">수정</button>
+                                        <button class="text-xs text-black underline modify-button pb-3 text-gray-400" th:if="${@rq.login  and @rq.member.id == subComment.member.id}" onclick="editSubComment()" th:attr="data-id=${subComment.id}">수정</button>
                                         <a href="javascript:void(0);" th:if="${@rq.login and @rq.member.id == subComment.member.id}" th:data-uri="@{|/subComment/delete/${subComment.id}|}" class="delete text-xs text-black mx-2 underline pb-3  text-gray-400">삭제</a>
                                         <form th:action="@{|/likes/like/subComment/${subComment.id}|}" method="post">
                                             <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
