--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -53,9 +53,6 @@
                     <label class="block mb-2">아이디</label>
                     <input type="text" name="username" class="border-b border-info px-2 py-2 w-full focus:outline-none"
                            placeholder="아이디를 입력하세요">
-<!--                    <div th:if="${#fields.hasErrors('username')}" th:errors="*{username}" class="error-message">-->
-<!--                        <p>로그인에 실패했습니다. 아이디와 비밀번호를 확인해주세요.</p>-->
-<!--                    </div>-->
                 </div>
                 <div class="form-control">
                     <label class="block mb-2 mt-4">비밀번호</label>
@@ -66,6 +63,17 @@
                     <button type="submit" class="mt-8 bg-info text-white px-4 py-2 rounded-lg">로그인</button>
                 </div>
             </form>
+            <div>
+                <a class="btn btn-link" href="/oauth2/authorization/kakao">
+                    카카오로 로그인하기
+                </a>
+                <a class="btn btn-link" href="/oauth2/authorization/google">
+                    구글 로그인하기(아직 안됨)
+                </a>
+                <a class="btn btn-link" href="/oauth2/authorization/naver">
+                    네이버 로그인하기(아직 안됨)
+                </a>
+            </div>
         </div>
     </div>
 </main>
