--- a/src/main/resources/templates/article/articleForm.html
+++ b/src/main/resources/templates/article/articleForm.html
@@ -7,34 +7,85 @@
     <div class="container mx-auto py-8 w-1/2">
         <h1 class="text-2xl font-bold">게시글 작성</h1>
 
-        <form class="mt-4" th:object="${articleRequestDto}" method="post">
-<!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
+        <form class="mt-4" th:object="${articleRequestDto}" method="post" onsubmit="ArticleRequestForm__submit(this); return false;">
+            <!-- <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
             <div class="mb-4">
-                <input type="text" th:field="*{title}" class="form-input w-full border border-info rounded-md h-10 p-3" placeholder="제목을 입력하세요">
+                <input type="text" name="title" th:field="*{title}" class="form-input w-full border border-info rounded-md h-10 p-3" placeholder="제목을 입력하세요">
             </div>
 
             <div class="mb-4">
-                <textarea th:field="*{content}" class="form-textarea w-full h-64 resize-none border border-info rounded-md p-3" placeholder="본문을 입력하세요"></textarea>
+                <textarea name="content" th:field="*{content}" class="form-textarea w-full h-64 resize-none border border-info rounded-md p-3" placeholder="본문을 입력하세요"></textarea>
             </div>
 
-            <button type="submit" class="register bg-info hover:bg-blue-500 text-white font-bold px-4 py-2 rounded border-info">저장하기</button>
+            <div class="mb-4">
+                <input type="text" id="hashTagInput" class="form-input w-full border border-info rounded-md h-10 p-3" placeholder="태그를 입력하세요" onkeydown="if(event.keyCode===13) addHashTag(event)">
+            </div>
+
+            <div id="hashTagList" class="flex flex-wrap mb-4">
+                <!-- 해시태그 목록이 여기에 추가될 것입니다. -->
+            </div>
+            <input type="hidden" id="hashTagStr" name="hashTagStr" th:field="*{hashTagStr}" />
+
+            <button type="submit" class="register bg-info hover:bg-blue-500 text-white font-bold px-4 py-2 rounded border-info" onclick="submitForm()">저장하기</button>
         </form>
     </div>
 
 
     <script layout:fragment="script" type='text/javascript'>
-        const btn = document.querySelector('.register');
-        const titleArea = document.querySelector('.title-textarea');
-        const contentArea = document.querySelector('.content-textarea');
+        function ArticleRequestForm__submit(form) {
+            if (form.title.value.length === 0) {
+                toastWarning('제목을 입력해야 합니다.');
+                form.title.focus();
+                return;
+            }
 
-        btn.addEventListener('click', function() {
-            if (titleArea.value === '') {
-                confirm('제목을 입력해야 합니다.');
+            if(form.content.value.length === 0) {
+                toastWarning('내용을 입력해야 합니다.');
+                form.content.focus();
+                return;
             }
-            else if(contentArea.value === '') {
-                confirm('내용을 입력해야 합니다.');
+
+            form.submit();
+        }
+
+        // 해시태그 추가를 위한 함수
+        function addHashTag(event) {
+            event.preventDefault();
+            var hashTagInput = document.getElementById('hashTagInput');
+            var hashTagText = hashTagInput.value.trim().replace(/\s+/g, ''); // 띄어쓰기 제거
+
+            if (hashTagText !== '') {
+                var hashTagList = document.getElementById('hashTagList');
+                var listItem = document.createElement('div');
+                listItem.className = 'bg-gray-200 px-2 py-1 rounded-full m-1';
+                listItem.textContent = '#' + hashTagText;
+                listItem.id = 'hashTagItem_' + hashTagText;
+
+                var closeButton = document.createElement('span');
+                closeButton.className = 'ml-2 cursor-pointer';
+                closeButton.innerHTML = '&times;';
+                closeButton.addEventListener('click', function () {
+                    listItem.remove();
+                });
+
+                listItem.appendChild(closeButton);
+                hashTagList.appendChild(listItem);
+                hashTagInput.value = '';
             }
-        });
+        }
+
+        // 폼 전송을 위한 함수
+        function submitForm() {
+            var hashTagList = document.getElementById('hashTagList');
+            var hashTagItems = hashTagList.getElementsByClassName('bg-gray-200');
+            var hashTagValues = [];
+            for (var i = 0; i < hashTagItems.length; i++) {
+                var hashTagText = hashTagItems[i].textContent.trim().substring(1, hashTagItems[i].textContent.length - 1);
+                hashTagValues.push(hashTagText);
+            }
+            document.getElementById('hashTagStr').value = hashTagValues.join(',');
+            document.forms[0].submit();
+        }
     </script>
 </main>
 
