--- a/src/main/resources/templates/article/detailArticle.html
+++ b/src/main/resources/templates/article/detailArticle.html
@@ -29,19 +29,22 @@
             </form>
         </div>
         <hr class="border-info mt-4 mb-4">
-            <form th:action="@{|/comment/create/${article.id}|}" th:object="${commentRequestDto}" method="post" class="flex mb-4 justify-between items-start">
-                <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                <div class="flex">
-                    <div th:if="${@rq.login}" th:text="${@rq.member.username}" class="text-xs w-24 text-center" ></div>
-                </div>
-                <textarea th:field="*{content}" class="form-textarea border border-info rounded-md px-4 py-2 flex-grow focus:outline-none min-h-[100px]" placeholder="댓글을 작성하세요"></textarea>
-                <button type="submit" class="register bg-info text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-blue-500">등록</button>
-            </form>
+        <!--댓글 등록-->
+        <form th:action="@{|/comment/create/${article.id}|}" th:object="${commentRequestDto}" method="post" class="flex mb-4 justify-between items-start" onsubmit="CommentRequestForm__submit(this); return false;">
+            <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
+            <div class="flex">
+                <div th:if="${@rq.login}" th:text="${@rq.member.username}" class="text-xs w-24 text-center" ></div>
+            </div>
+            <textarea name="content" th:field="*{content}" class="form-textarea border border-info rounded-md px-4 py-2 flex-grow focus:outline-none min-h-[100px]" placeholder="댓글을 작성하세요"></textarea>
+            <button type="submit" class="register bg-info text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-blue-500">등록</button>
+        </form>
+        <!--댓글 등록 완료-->
 
         <hr class="border-info mt-4">
         <ul class="container" th:each="comment : ${article.commentList}">
             <div th:if="${!comment.deleted}">
                 <li class="text-black p-1 justify-between">
+                    <!--댓글 내용-->
                     <div class="flex justify-between items-center">
                         <div class="flex items-end mb-3">
                             <div th:text="${comment.member.username}" class="text-sm pl-3 mr-2">글쓴이</div>
@@ -61,10 +64,12 @@
                         </div>
                     </div>
                     <p th:id="|text-${comment.id}|" style="word-break: break-word;" class="text-sm min-h-[30px] modify-comment pl-3"th:text="${comment.content}"></p>
+                    <!--댓글 내용 끝-->
 
-                    <form th:action="@{|/comment/update/${comment.id}|}" th:object="${commentRequestDto}" method="post" class="mb-4 justify-between items-start">
+                    <!--댓글 수정-->
+                    <form th:action="@{|/comment/update/${comment.id}|}" th:object="${commentRequestDto}" method="post" class="mb-4 justify-between items-start" onsubmit="CommentRequestForm__submit(this); return false;">
                         <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                        <textarea th:id="|textarea-${comment.id}|" th:field="*{content}" class="hidden modify-textarea form-textarea w-full p-3 resize-none overflow-y-auto border border-info rounded-md mb-2 text-sm" placeholder="댓글 내용"></textarea>
+                        <textarea th:id="|textarea-${comment.id}|" name="content" th:field="*{content}" class="hidden modify-textarea form-textarea w-full p-3 resize-none overflow-y-auto border border-info rounded-md mb-2 text-sm" placeholder="댓글 내용"></textarea>
                         <div class="flex">
                             <input th:id="|button-${comment.id}|" type="submit" value="수정완료" class="hidden modify-save-button bg-info text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-blue-500 ml-auto" onclick="saveComment()" th:attr="data-id=${comment.id}">
                         </div>
@@ -72,6 +77,7 @@
                     <div class="flex justify-end">
                         <button class="text-xs text-black underline create-subComment-button pb-3" onclick="createSubCommentForm()" th:attr="data-id=${comment.id}">답글</button>
                     </div>
+                    <!--댓글 수정 완료-->
 
 
 
@@ -82,6 +88,7 @@
                                 <div class="mt-3 fa-solid fa-arrow-turn-up fa-rotate-90 text-xl text-info"></div>
                             </div>
                             <li class="text-black p-1 justify-between flex-grow border-t border-gray-300 bg-gray-100">
+                                <!--답글 내용-->
                                 <div class="flex justify-between items-center">
                                     <div class="flex items-end mb-3 mt-3">
                                         <div th:text="${subComment.member.username}" class="text-sm mr-2"></div>
@@ -100,36 +107,42 @@
                                         </form>
                                     </div>
                                 </div>
+                                <!--답글 내용 끝-->
+
+                                <!--답글 수정-->
                                 <p th:id="|text-subComment-${subComment.id}|" style="word-break: break-word;" class="text-sm min-h-[25px] modify-comment"th:text="${subComment.content}"></p>
                                 <div th:id="|update-subComment-${subComment.id}|" class="hidden">
-                                    <form th:action="@{|/subComment/update/${subComment.id}|}" th:object="${subCommentRequestDto}" method="post" class="mb-4 justify-between items-start">
+                                    <form th:action="@{|/subComment/update/${subComment.id}|}" th:object="${subCommentRequestDto}" method="post" class="mb-4 justify-between items-start" onsubmit="SubCommentRequestForm__submit(this); return false;">
                                         <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                                        <textarea th:id="|textarea-subComment-${subComment.id}|" th:field="*{content}" class="modify-textarea form-textarea w-full p-3 resize-none overflow-y-auto border border-info rounded-md mb-2 text-sm" placeholder="답글 내용"></textarea>
+                                        <textarea name="content" th:id="|textarea-subComment-${subComment.id}|" th:field="*{content}" class="form-textarea2 modify-textarea w-full p-3 resize-none overflow-y-auto border border-info rounded-md mb-2 text-sm" placeholder="답글 내용"></textarea>
                                         <div class="flex">
-                                            <input type="submit" value="수정완료" class="modify-save-button bg-info text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-blue-500 ml-auto" onclick="saveSubComment()" th:attr="data-id=${subComment.id}">
+                                            <button type="submit" class="register2 modify-save-button bg-info text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-blue-500 ml-auto" onclick="saveSubComment()" th:attr="data-id=${subComment.id}">수정완료</button>
                                         </div>
                                     </form>
                                 </div>
+                                <!--답글 수정 완료-->
                             </li>
                         </div>
                     </ul>
 
 
+                    <!--답글 등록-->
                     <div th:id="|hidden-subComment-${comment.id}|" class="hidden">
                         <hr class=" border-gray-300 mt-4 mb-4">
                         <div class="flex justify-start">
                             <div class="mx-2">
                                 <div class="fa-solid fa-arrow-turn-up fa-rotate-90 text-xl text-info"></div>
                             </div>
-                            <form th:action="@{|/subComment/create/${comment.id}|}" th:object="${subCommentRequestDto}" method="post" class="mt-1 mb-4 justify-between items-start flex-grow">
+                            <form th:action="@{|/subComment/create/${comment.id}|}" th:object="${subCommentRequestDto}" method="post" class="mt-1 mb-4 justify-between items-start flex-grow" onsubmit="SubCommentRequestForm__submit(this); return false;">
                                 <!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
-                                <textarea th:field="*{content}" class="form-textarea w-full p-3 resize-none overflow-y-auto border border-info rounded-md mb-2 text-sm" placeholder="답변에 댓글을 작성하세요"></textarea>
+                                <textarea name="content" th:field="*{content}" class="form-textarea2 w-full p-3 resize-none overflow-y-auto border border-info rounded-md mb-2 text-sm" placeholder="답변에 댓글을 작성하세요"></textarea>
                                 <div class="flex">
-                                    <input type="submit" value="등록" class="bg-info text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-blue-500 ml-auto" onclick="createSubComment()" th:attr="data-id=${comment.id}">
+                                    <button type="submit" class="register2 bg-info text-white px-4 py-2 rounded-md ml-2 flex-start text-xs hover:bg-blue-500 ml-auto" onclick="createSubComment()" th:attr="data-id=${comment.id}">등록</button>
                                 </div>
                             </form>
                         </div>
                     </div>
+                    <!--답글 등록 완료-->
                     <hr class=" border-gray-300 mb-4">
                 </li>
             </div>
@@ -147,14 +160,25 @@
         });
 
 
-        const btn = document.querySelector('.register');
-        const textarea = document.querySelector('.form-textarea');
-
-        btn.addEventListener('click', function() {
-            if (textarea.value === '') {
-                confirm('내용을 입력해야 합니다.');
+        function CommentRequestForm__submit(form) {
+            if(form.content.value.length === 0) {
+                toastWarning('내용을 입력해야 합니다.');
+                form.content.focus();
+                return;
             }
-        });
+
+            form.submit();
+        }
+
+        function SubCommentRequestForm__submit(form) {
+            if(form.content.value.length === 0) {
+                toastWarning('내용을 입력해야 합니다.');
+                form.content.focus();
+                return;
+            }
+
+            form.submit();
+        }
 
         function editComment() {
             const id = event.target.getAttribute('data-id');
