--- a/src/main/resources/templates/article/list.html
+++ b/src/main/resources/templates/article/list.html
@@ -7,7 +7,7 @@
         <form th:action="@{/article/list}" method="get" id="toListForm">
             <div class="container mx-auto p-8 w-2/3">
                 <div class="flex items-center justify-between h-16">
-                    <h1 class="text-2xl font-bold">전체 게시글</h1>
+                    <a href="/article/list" class="text-2xl font-bold">전체 게시글</a>
                     <div class="form-control flex-grow">
                         <select name="sortCode" class="ml-2 select w-40 select-ghost select-sm"
                                 onchange="$(this).closest('form').submit();">
@@ -73,6 +73,7 @@
                         <option value="내용">내용</option>
                         <option value="제목+내용">제목+내용</option>
                         <option value="글쓴이">글쓴이</option>
+                        <option value="해시태그">해시태그</option>
                     </select>
                     <script>
                         if (params.category) {
