--- a/src/main/resources/templates/article/articleForm.html
+++ b/src/main/resources/templates/article/articleForm.html
@@ -17,11 +17,18 @@
                 <textarea name="content" th:field="*{content}" class="form-textarea w-full h-64 resize-none border border-info rounded-md p-3" placeholder="본문을 입력하세요"></textarea>
             </div>
 
-            <div class="mb-4">
-                <input type="text" id="hashTagInput" class="form-input w-full border border-info rounded-md h-10 p-3" placeholder="태그를 입력하세요" onkeydown="if(event.keyCode===13) addHashTag(event)">
+            <div class="mb-4 border border-info flex items-center">
+                <p class="pl-3">#</p>
+                <input type="text" id="hashTagInput" class="form-input w-full border-0 border-info rounded-md h-10" placeholder="태그를 입력하세요" onkeydown="if(event.keyCode===13) addHashTag(event)">
             </div>
 
             <div id="hashTagList" class="flex flex-wrap mb-4">
+                <div th:if="${!articleRequestDto.hashTags.isEmpty()}" th:each="hashTag : ${articleRequestDto.hashTags}">
+                    <div class="bg-blue-200 px-2 py-1 rounded-full m-1">
+                        <span th:text="|#${hashTag.keyword.content}|" class="keyword"></span>
+                        <span onclick="this.parentNode.remove();" class="ml-1 cursor-pointer">&times;</span>
+                    </div>
+                </div>
                 <!-- 해시태그 목록이 여기에 추가될 것입니다. -->
             </div>
             <input type="hidden" id="hashTagStr" name="hashTagStr" th:field="*{hashTagStr}" />
@@ -56,8 +63,10 @@
 
             if (hashTagText !== '') {
                 var hashTagList = document.getElementById('hashTagList');
-                var listItem = document.createElement('div');
-                listItem.className = 'bg-gray-200 px-2 py-1 rounded-full m-1';
+                var listItems = document.createElement('div');
+                var listItem = document.createElement('span');
+                listItems.className = 'bg-blue-200 px-2 py-1 rounded-full m-1'
+                listItem.className = 'keyword';
                 listItem.textContent = '#' + hashTagText;
                 listItem.id = 'hashTagItem_' + hashTagText;
 
@@ -65,11 +74,12 @@
                 closeButton.className = 'ml-2 cursor-pointer';
                 closeButton.innerHTML = '&times;';
                 closeButton.addEventListener('click', function () {
-                    listItem.remove();
+                    listItems.remove();
                 });
 
-                listItem.appendChild(closeButton);
-                hashTagList.appendChild(listItem);
+                listItems.appendChild(listItem);
+                listItems.appendChild(closeButton);
+                hashTagList.appendChild(listItems);
                 hashTagInput.value = '';
             }
         }
@@ -77,10 +87,10 @@
         // 폼 전송을 위한 함수
         function submitForm() {
             var hashTagList = document.getElementById('hashTagList');
-            var hashTagItems = hashTagList.getElementsByClassName('bg-gray-200');
+            var hashTagItems = hashTagList.getElementsByClassName('keyword');
             var hashTagValues = [];
             for (var i = 0; i < hashTagItems.length; i++) {
-                var hashTagText = hashTagItems[i].textContent.trim().substring(1, hashTagItems[i].textContent.length - 1);
+                var hashTagText = hashTagItems[i].textContent.trim().substring(1);
                 hashTagValues.push(hashTagText);
             }
             document.getElementById('hashTagStr').value = hashTagValues.join(',');
